# PolarizedPotentialParticles

./: README.md  pyproject.toml  runNotebookUv.sh
docs/: index.html  manifest.json  results.md
docs/misc/: results.md
docs/runs/donut_test/: model.pt_config.json
docs/runs/donut_test_4hc_hlr/: model.pt_config.json
docs/runs/donut_test_split/: model.pt_config.json
docs/runs/learned_sigma_test/: model.pt_config.json
notebooks/: test.ipynb  test.py
scripts/: generate_dashboard_manifest.py
src/PolarizedPotentialParticles/: configs.py  custom_conv.py  displays.py  losses.py  particles.py  trainer.py  utils.py
src/polarizedpotentialparticles/: __init__.py  configs.py  custom_conv.py  displays.py  losses.py  particles.py  quality_metrics.py  trainer.py  utils.py
src/polarizedpotentialparticles/scripts/: generate_dashboard_manifest.py
