[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polarizedpotentialparticles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.8.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyter-bokeh>=4.0.5",
    "matplotlib>=3.9",
    "panel>=1.8.7",
    "pip>=26.0.1",
    "torch>=2.10.0",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.7.0",
    "torchvision>=0.25.0",
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/polarizedpotentialparticles"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
