[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polarizedpotentialparticles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    # PyTorch (GPU build from CUDA index)
    "torch==2.8.0",
    "torchvision",
    
    # Visualization
    "bokeh>=3.8.2",
    "matplotlib>=3.9",
    "panel>=1.8.7",

    # Jupyter
    "jupyter>=1.1.1",
    "jupyter-bokeh>=4.0.5",
    "ipykernel>=7.2.0",


    # PyG core
    "torch-geometric>=2.7.0",

    # PyG CUDA extensions (must be explicitly listed)
    "pyg-lib",
    "torch-scatter",
    "torch-sparse",
    "torch-cluster",
    "torch-spline-conv",
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/polarizedpotentialparticles"]

[tool.uv]
extra-index-url = [
    # Official CUDA 12.8 torch wheels
    "https://download.pytorch.org/whl/cu128",
]

find-links = [
    # PyG compiled CUDA wheels for torch 2.8 + cu128
    "https://data.pyg.org/whl/torch-2.8.0+cu128.html",
]